feat(device) detect brand LG model: L90 (LG-D405)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9463,6 +9463,8 @@ LG:
       model: 'Disney Mobile DM-$1'
     - regex: 'LG-D325'
       model: 'L70'
+    - regex: 'LG-D405'
+      model: 'L90'
     - regex: 'LG-D340F8'
       model: 'L70 Tri'
     - regex: 'LM-X210APM'
