--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -8160,3 +8160,19 @@
     model: UniQ
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.0.2; LG-D405 Build/LRX22G.A1454843669; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/59.0.3071.125 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/137.0.0.24.91;]
+  os:
+    name: Android
+    version: 5.0.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 137.0.0.24.91
+  device:
+    type: smartphone
+    brand: LG
+    model: L90
+  os_family: Android
+  browser_family: Unknown
