--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -7319,7 +7319,7 @@
   os:
     name: Android
     version: 10
-    platform:
+    platform: ""
   client:
     type: browser
     name: Chrome Webview
@@ -7337,7 +7337,7 @@
   os:
     name: Android
     version: 10
-    platform:
+    platform: ""
   client:
     type: browser
     name: Chrome Webview
@@ -7348,5 +7348,23 @@
     type: smartphone
     brand: Vivo
     model: Y73s
+  os_family: Android
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; V2034A Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.62
+  os:
+    name: Android
+    version: 10
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 78.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Vivo
+    model: Y30
   os_family: Android
   browser_family: Chrome
