Add Vivo model Y30 <- V2036A

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3189,7 +3189,7 @@ Vivo:
       model: 'Y3'
     - regex: 'V1930A(?:[);/ ]|$)'
       model: 'Y3 Standard'
-    - regex: 'V2034A(?:[);/ ]|$)'
+    - regex: 'V203[46]A(?:[);/ ]|$)'
       model: 'Y30' 
     - regex: 'V2036(?:[);/ ]|$)'
       model: 'Y31'
