--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -7386,3 +7386,21 @@
     model: Y30
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; ALA-AN70 Build/HONORALA-AN70; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.120
+  os:
+    name: Android
+    version: 10
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 77.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Honor V40
+  os_family: Android
+  browser_family: Chrome
