--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6910,7 +6910,7 @@ Huawei:
       model: 'Honor P40'
     - regex: 'COR-(?:AL[01]0|L29|TL10)(?:[);/ ]|$)'
       model: 'Honor Play'
-    - regex: 'ASK-AL00x(?:[);/ ]|$)'
+    - regex: 'ASK-AL(00x|20)(?:[);/ ]|$)'
       model: 'Honor Play 3'
     - regex: 'KSA-AL10(?:[);/ ]|$)'
       model: 'Honor Play 3E'
