Add OPPO model A93 <- PEHM00|PEHT00

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11939,6 +11939,8 @@ OPPO:
       model: 'A92'
     - regex: 'PDKT00(?:[);/ ]|$)'
       model: 'A92s'
+    - regex: 'PEH[MT]00(?:[);/ ]|$)'
+      model: 'A93'
     - regex: 'PDKM00(?:[);/ ]|$)'
       model: 'A93s'
     - regex: 'PCE[TM]00(?:[);/ ]|$)'
