Honor 30 Lite <- MXW-TN00|MXW-AN00 , Honor V40 Lite <- ALA-AN70 , remove duplicate test case.

--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -7401,7 +7401,7 @@
   device:
     type: smartphone
     brand: Huawei
-    model: Honor V40
+    model: Honor V40 Lite
   os_family: Android
   browser_family: Chrome
 - 
@@ -7671,6 +7671,6 @@
   device:
     type: smartphone
     brand: Huawei
-    model: Honor 30
+    model: Honor 30 Lite
   os_family: Android
   browser_family: Chrome
