--- a/Tests/fixtures/smartphone-6.yml
+++ b/Tests/fixtures/smartphone-6.yml
@@ -637,7 +637,7 @@
   device:
     type: smartphone
     brand: Huawei
-    model: Honor 30
+    model: Honor 30 Lite
   os_family: Android
   browser_family: Chrome
 - 
