--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -7683,12 +7683,30 @@
   client:
     type: browser
     name: Chrome Webview
-    version: 77.0
+    version: 77.0.3865.120
     engine: Blink
     engine_version: ""
   device:
     type: smartphone
     brand: Realme
     model: Q2 Pro
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; RMX2201 Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.120
+  os:
+    name: Android
+    version: 10
+    platform:
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 77.0.3865.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Realme
+    model: V3 5G
   os_family: Android
   browser_family: Chrome
