--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -7746,3 +7746,21 @@
     model: V11 5G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; RMX3041 Build/RP1A.200720.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.62
+  os:
+    name: Android
+    version: 11
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 78.0.3904.62
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Realme
+    model: V13
+  os_family: Android
+  browser_family: Chrome
