Add Vivo model iQOO Neo 5 <- V2055A, X60 Pro Plus <- V2056A

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3048,7 +3048,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[026]|V2031[E]?A|V203[46]A|V204[03]|V204[6789]A|V20(6[15]|99)A|X50 Pro\+|I1927)(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[026]|V2031[E]?A|V203[46]A|V204[03]|V204[6789]A|V20(6[15]|99|5[56])A|X50 Pro\+|I1927)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3069,6 +3069,8 @@ Vivo:
       model: 'iQOO Neo 3'
     - regex: 'V1936A[L]?(?:[);/ ]|$)'
       model: 'iQOO Neo 855'
+    - regex: 'V2055A(?:[);/ ]|$)'
+      model: 'iQOO Neo 5'
     - regex: 'V1986A(?:[);/ ]|$)'
       model: 'iQOO Z1'
     - regex: 'V2012A(?:[);/ ]|$)'
@@ -3177,6 +3179,8 @@ Vivo:
       model: 'X60'
     - regex: 'V2047A(?:[);/ ]|$)'
       model: 'X60 Pro'
+    - regex: 'V2056A(?:[);/ ]|$)'
+      model: 'X60 Pro Plus'
     - regex: 'X9Plus(?:[);/ ]|$)'
       model: 'X9 Plus'
     - regex: 'vivo 1902(?:[);/ ]|$)'
