Add Smartisan model Nut Pro 3 <- DT1902A

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14180,7 +14180,7 @@ Smartfren:
 
 # Smartisan
 Smartisan:
-  regex: '(SM(?:70[15]|[89]01|919)|OD10[35]|YQ60[1357]|DE106|DT1901A|O[CE]106|OS103|O[CS]105)[ /;\)]'
+  regex: '(SM(?:70[15]|[89]01|919)|OD10[35]|YQ60[1357]|DE106|DT190[12]A|O[CE]106|OS103|O[CS]105)[ /;\)]'
   device: 'smartphone'
   models:
     - regex: 'SM70[15]'
@@ -14203,7 +14203,7 @@ Smartisan:
       model: 'Nut Pro 2s'
     - regex: 'OC10[56][ /;\)]'
       model: 'Nut 3'
-    - regex: 'DT1901A[ /;\)]'
+    - regex: 'DT190[12]A[ /;\)]'
       model: 'Nut Pro 3'
     - regex: 'OS103[ /;\)]'
       model: 'JianGuo Pro 2'
