model name change V15 -> V15 5G, V13 -> V13 5G, Y30 2021 -> Y30 (2021), S9 2021 -> S9 (2021)

--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -7725,7 +7725,7 @@
   device:
     type: smartphone
     brand: Realme
-    model: V15
+    model: V15 5G
   os_family: Android
   browser_family: Chrome
 -
@@ -7761,7 +7761,7 @@
   device:
     type: smartphone
     brand: Realme
-    model: V13
+    model: V13 5G
   os_family: Android
   browser_family: Chrome
 -
@@ -7815,7 +7815,7 @@
   device:
     type: smartphone
     brand: Vivo
-    model: Y30 2021
+    model: Y30 (2021)
   os_family: Android
   browser_family: Chrome
 -
@@ -7959,7 +7959,7 @@
   device:
     type: smartphone
     brand: Vivo
-    model: S9 2021
+    model: S9 (2021)
   os_family: Android
   browser_family: Chrome
 -
@@ -8229,7 +8229,7 @@
   device:
     type: smartphone
     brand: Realme
-    model: V15
+    model: V15 5G
   os_family: Android
   browser_family: Chrome
 -
