--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3120,7 +3120,7 @@ Vivo:
     - regex: 'V2080A(?:[);/ ]|$)'
       model: 'S7t'
     - regex: 'V2072A(?:[);/ ]|$)'
-      model: 'S9 2021'
+      model: 'S9 (2021)'
     - regex: 'V2048A(?:[);/ ]|$)'
       model: 'S9e'
     - regex: 'V1941A(?:[);/ ]|$)'
@@ -3210,7 +3210,7 @@ Vivo:
     - regex: 'V203[46]A(?:[);/ ]|$)'
       model: 'Y30'
     - regex: 'V2099A(?:[);/ ]|$)'
-      model: 'Y30 2021'
+      model: 'Y30 (2021)'
     - regex: 'V2066[B]?A(?:[);/ ]|$)'
       model: 'Y30g'
     - regex: 'V2036(?:[);/ ]|$)'
@@ -11844,8 +11844,6 @@ Realme:
       model: '7 Pro'
     - regex: 'RMX3081'
       model: '8 Pro'
-    - regex: 'RMX3092'
-      model: 'V15'
     - regex: 'RMX1925(?:[);/ ]|$)'
       model: '5S'
     - regex: 'RMX1811(?:[);/ ]|$)'
@@ -11895,9 +11893,9 @@ Realme:
     - regex: 'RMX312[12]'
       model: 'V11 5G'
     - regex: 'RMX3041'
-      model: 'V13'
-    - regex: 'RMX3093'
-      model: 'V15'
+      model: 'V13 5G'
+    - regex: 'RMX309[23]'
+      model: 'V15 5G'
     - regex: 'RMX3201'
       model: 'C21'
     - regex: 'Realme[ _]([1-9])[ _]Pro(?:[);/ ]|$)'
@@ -18392,7 +18390,7 @@ X-TIGI:
     - regex: 'X[-_]TIGI[ _-]([^/;)]+) Build'
       model: '$1'
 
-# Xiaolajiao (Shenzhen Peppers)
+# Xiaolajiao or Shenzhen Peppers (xiaolajiao.com)
 Xiaolajiao:
   regex: '(LA2-(?:L|S[N]?)|HLA Note3|20190416Q|20170608S|20180322D|20190325D|20190718Q)(?:[);/ ]|$)'
   device: 'smartphone'
