--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4805,3 +4805,21 @@
     model: Pro Q10 LTE
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; PICOpad_7H_7_3G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.75 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 73.0.3683.75
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Axioo
+    model: PicoPad 7H 7 3G
+  os_family: Android
+  browser_family: Chrome
