--- a/Tests/fixtures/wearable.yml
+++ b/Tests/fixtures/wearable.yml
@@ -427,3 +427,21 @@
     model: Watch SE 44mm
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Pico G2 4K Build/OPM1.171019.026; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/61.0.3163.98 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 61.0.3163.98
+    engine: Blink
+    engine_version: ""
+  device:
+    type: wearable
+    brand: Pico
+    model: G2 4K
+  os_family: Android
+  browser_family: Chrome
