--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -8371,7 +8371,7 @@
     engine: Blink
     engine_version: ""
   device:
-    type: tablet
+    type: smartphone
     brand: Ramos
     model: MOS1
   os_family: Android
