--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22207,7 +22207,7 @@ Revo:
   models:
     - regex: 'Revo_Youplus'
       model: 'You Plus'
-    - regex: 'Revo[ ](You|555)'
+    - regex: 'Revo[ _]?(You|555)'
       model: '$1'
 
 # Axioo
