feat(device) detect brand Mito models: T71, T15, T65, T89, A38, A80

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19305,14 +19305,14 @@ VKworld:
     - regex: 'VK(700X|6050|6735|700)(?:[);/ ]|$)'
       model: 'VK$1'
 
-# Mito
+# Mito (mitomobile.com)
 Mito:
-  regex: 'MITO[- _](A(?:1[0678]|19_[12]GB|21|3[59]|55|180|2[36]0|313|322|33|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950)|T(?:8|10|35|3[03]0|510|888)|311)(?:[);/ ]|$)'
+  regex: 'MITO[- _](?:[AT]\d+|311|A19_[12]GB)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'MITO[- _](A(?:1[0678]|19_[12]GB|21|3[59]|55|180|2[36]0|33|322|313|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950)|311)(?:[);/ ]|$)'
+    - regex: 'MITO[- _](A(?:1[0678]|19_[12]GB|21|3[589]|55|180|2[36]0|33|322|313|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950|80)|311)(?:[);/ ]|$)'
       model: '$1'
-    - regex: 'MITO[ _](T(?:8|10|35|3[03]0|510|888))(?:[);/ ]|$)'
+    - regex: 'MITO[ _](T(?:8|10|[136]5|3[03]0|510|71|89|888))(?:[);/ ]|$)'
       device: 'tablet'
       model: '$1'
 
