--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -1241,3 +1241,39 @@
     model: Phantom PZ18
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; MITO A38) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.90 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 78.0.3904.90
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Mito
+    model: A38
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; MITO_A80) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.116 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 77.0.3865.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Mito
+    model: A80
+  os_family: Android
+  browser_family: Chrome
