feat(device) detect brand Melrose models: S9, S9 Plus, S9P feat(device) detect brand Medion models: Life P5004, Life P5005, Life X6001

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10341,7 +10341,7 @@ Medion:
     - regex: '(?:MD_)?LIFETAB_([a-z0-9]+)'
       device: 'tablet'
       model: 'Lifetab $1'
-    - regex: '(E450[46]|E5004|S5004|X5001|E5020|P5015)(?:[);/ ]|$)'
+    - regex: '(E450[46]|E5004|S5004|X5001|E5020|P5015|P500[45]|X6001)(?:[);/ ]|$)'
       model: 'Life $1'
     - regex: '(B5530)(?:[);/ ]|$)'
       model: '$1'
@@ -19757,11 +19757,13 @@ Kzen:
 
 # MELROSE
 Melrose:
-  regex: 'MELROSE_(?:S9|2019)(?:[);/ ]|$)'
+  regex: 'MELROSE[_ ](?:S9\+?|S9P|2019)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'MELROSE_S9(?:[);/ ]|$)'
-      model: 'S9'
+    - regex: 'MELROSE[_ ]S9\+(?:[);/ ]|$)'
+      model: 'S9 Plus'
+    - regex: 'MELROSE[_ ](S9|S9P)(?:[);/ ]|$)'
+      model: '$1'
     - regex: 'MELROSE_2019(?:[);/ ]|$)'
       model: '2019 Ultra Slim 3.4"'
 
